    - Oil refineries have a base quality bonus of 20% to accomplish this. Should not affect any other vanilla recipes.
    - Quality packs are less effective than vanilla, due to ease of upcycling. Rare packs are the new baseline. (Repair packs affected unfortunately)
    - Automation card techs reduced in price to avoid being impacted by quality changes. (Also Kovarex is cheaper to unlock.)
    - Agricultural science packs spoil in 1h again due to addition of quality stuff. Result is now eggs to avoid easy access to quality circuits etc.
    - Quality modules now give a small energy efficiency penalty.
    - Minor changes to recipe ordering in crafting tab.
    - Updated tips and tricks.
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2026.01.31
  Info:
    - This update aims to slow down science production and decrease the effect of late-game productivity.
    - Mostly nerfs, a single Gleba buff. Existing saves will work fine, just slower.
  Changes:
    - Most recipes added by NSO have had their base craft times doubled.
    - Research speed tech bonus halved. Researching the first pack tech no longer provides a free research speed boost. (Overall, labs are half as fast)
    - Productivity in slurry, data and pack recipes are capped to 100%. Tooltips added to recipes to show this. (Otherwise late game the packs can be CHEAPER than vanilla!)
    - Science gel is capped at 0%, preventing any base productivity from having an effect. Recipes adjusted so the cost per gel remains mostly the same.
    - Nauvis gel can no longer be made in biochambers. Nauvis gel craft time halved.
    - Prod module 3 now has 8% productivity instead of 10%. All prod modules speed penalties doubled.
    - Speed module 3 now has 40% boost instead of 50%.