@@ -8,6 +8,6 @@ nso-removals=Item Removals
 [tips-and-tricks-item-description]
 nso-title=Welcome to NSO!\n\nNSO is a medium-sized overhaul to science in Space Age, which aims to require the player to build larger and more complex factories without adding too many new intermediates. The ones added in this mod are only used in science production, so other areas of your bases will play the same.\n\nAll vanilla packs have been merged into one, and each pack now requires a much larger variety of ingredients to make. Don't be put off by the large costs and craft times of each pack, the cost of every tech is now much lower to compensate. Overall, you will still require more raw material than vanilla, along with a much larger base and significantly more complex space platforms.\n\nThe rest of the tips here will give a quick rundown of what has changed, and will include important notes that may not be obvious from Factoriopedia.\n\nThis mod is a work in progress. All recipe ingredients are basically final by now, but ingredient amounts, crafting times, and item/entity properties are all subject to balance changes in future updates. Ideally nothing that will break existing factories, but your ratios may change.\n\nMod compatibility is low and customizability is non-existent. I'd like to change this one day, but for now it isn't a high priority unless NSO randomly becomes popular.\n\nArt for data cards, science gel and slurries are from Malcolm Riley's Unused Renders. Link and details in mod portal.\n\nThank you for trying out NSO. Please do give feedback via the Factorio mod portal, or reach out to me (Nauviax) on Discord.
 nso-data=All science packs are made on space platforms, each planet produces and exports data cards instead. You can find all new and old science-related items in [item-group=space]. Data cards take in [item=nso-blank-data], [fluid=nso-science-gel], and some ingredients tied to that pack. Productivity on data recipes is limited to 100%, along with other science-related recipes. Recipes with productivity caps will have a tooltip stating this.\n\nEach card has unique properties to separate it from the Nauvis card [item=nso-space-data]:\n - [item=nso-metallurgic-data] is heavy and large, requiring more rocket launches and storage space.\n - [item=nso-electromagnetic-data] is produced and consumed in large quantities, also requiring more rocket launches and storage space. (Metallurgic requires more)\n - [item=nso-agricultural-data] still spoils, and requires SIGNIFICANTLY more fruit and nut to produce. Slightly lighter than other cards.\n - [item=nso-cryogenic-data] is slow to produce, with very long craft times at all stages. Slightly lighter than other cards.\n - [item=nso-promethium-data] now MUST be made near the shattered planet instead of smuggling chunks back to Nauvis.\n\nYour first few automation data cards should be used to unlock the Kovarex process. This tech should require 2 gel crafts to research, so don't bother crafting more until you have Kovarex ready to go.\n\n[item=nso-blank-data] is a relatively simple recipe, and the intent is mainly to provide a set of items that all planets must produce. Nothing stops you from exporting them to other planets, but the intent is local production. (Even for Promethium packs!)\nBlank data and pack production will return [item=nso-garbage-data] which can be recycled to recover small amounts of material. Before unlocking recycling, these will need to either be dropped to a planet for stockpiling, or just tossed into space.\n\n[fluid=nso-science-gel] has different recipes on each planet, including a space one for promethium packs. Each recipe will take some local items and a varying amount of [fluid=lubricant], [fluid=sulfuric-acid], and [item=plastic-bar]. Each craft creates enough gel for 2 packs before productivity, so don't be intimidated by the high input counts.\nLater packs require [item=wood] instead of plastic. Wood is now lighter and production has been significantly buffed on Nauvis; expect around 1 wood per second per tower. (Though do note that wood now spoils.)\nGel recipes: [recipe=nso-science-gel-space], [recipe=nso-science-gel-metallurgic], [recipe=nso-science-gel-electromagnetic], [recipe=nso-science-gel-agricultural], [recipe=nso-science-gel-cryogenic], and [recipe=nso-science-gel-promethium].\nGel recipes do not accept productivity, including the base productivity of buildings like foundries.\n\nLastly, note that all data cards have VERY low rocket capacities. Tech later on will make these much cheaper, but you will still need significantly more infrastructure to get data into space compared to vanilla.
-nso-packs=All science packs are made on space platforms, requiring data cards, [fluid=nso-space-slurry], [item=nso-promethium-147], and something extra. [fluid=nso-space-slurry] is similar to the original space science packs, being made from early game asteroid materials. It is used in all science packs, though later packs require upgrading to [fluid=nso-adv-space-slurry].\nSlurry recipes and science pack recipes have productivity caps, similar to science data recipes. These caps should only affect your end-game production.\n\n[item=nso-promethium-147] is obtained from [item=promethium-asteroid-chunk], and is required for all platform science recipes.\n\n[entity=medium-promethium-asteroid] now appear between planet routes, meaning to create science you will need to keep the platform moving between planets. Nauvis routes only have [entity=small-promethium-asteroid]. If you're struggling to get enough [item=nso-promethium-147], consider taking a longer route and gathering medium asteroids between the tier 2 planets, use prod modules in relevant machines, try stockpiling [fluid=nso-space-slurry] while you aren't using promethium to craft packs, or just make a wider platform.\n\nAll forms of promethium spoil now, so stationary platforms will quickly run out of material to work with. Notably this also affects [item=promethium-science-pack], as it requires [item=nso-hg-promethium-asteroid-chunk] only found from the large asteroids near the shattered planet.\n\n[entity=medium-promethium-asteroid] have twice the health of normal asteroids, and appear in addition to normal spawns. In order to not completely overwhelm platform turrets, both small and medium promethium asteroids are highly vulnerable to [entity=laser-turret]. For best results, you will want both types of turrets on your platforms.\n\nNote that specifically for [item=agricultural-science-pack], crafting is affected by the freshness of promethium. This recipe requires less promethium than others to make it easier, but you risk wasting a large amount of effective science if you don't apply Gleba principles to your Gleba platform. Keep belts moving, and throw out unused promethium! If done correctly, you can actually end up with packs that are fresher than the data used to make it. Due to pack upcycling mentioned below, it's generally a good idea to convert data into packs quickly to maximize freshness.\n\nLastly, science packs start out at half effectiveness and need to be upcycled to gain the full effect. This is an optional process, though techs are balanced around using packs of rare quality.\nUpcycling can be done via dedicated upcycling recipes [recipe=nso-space-science-pack-upcycle] that consume slurry and have a base 20% chance to increase the quality of the pack. Quality modules can be used to increase this chance, and speed modules are surprisingly viable for speeding up the process if you have lots of slurry to burn.\nUnlocking later tiers of quality allow for better science packs, though the later tiers give less of a bonus than the first few.\n(Also note that quality [item=agricultural-science-pack] spoils into quality eggs and not quality material!)
+nso-packs=All science packs are made on space platforms, requiring data cards, [fluid=nso-space-slurry], [item=nso-promethium-147], and something extra. [fluid=nso-space-slurry] is similar to the original space science packs, being made from early game asteroid materials. It is used in all science packs, though later packs require upgrading to [fluid=nso-adv-space-slurry].\nSlurry recipes and science pack recipes have productivity caps, similar to science data recipes. These caps should only affect your end-game production.\n\n[item=nso-promethium-147] is obtained from [item=promethium-asteroid-chunk], and is required for all platform science recipes.\n\n[entity=medium-promethium-asteroid] now appear between planet routes, meaning to create science you will need to keep the platform moving between planets. Nauvis routes only have [entity=small-promethium-asteroid]. If you're struggling to get enough [item=nso-promethium-147], consider taking a longer route and gathering medium asteroids between the tier 2 planets, use prod modules in relevant machines, try stockpiling [fluid=nso-space-slurry] while you aren't using promethium to craft packs, or just make a wider platform.\n\nAll forms of promethium spoil now, so stationary platforms will quickly run out of material to work with. Notably this also affects [item=promethium-science-pack], as it requires [item=nso-hg-promethium-asteroid-chunk] only found from the large asteroids near the shattered planet.\n\n[entity=medium-promethium-asteroid] have twice the health of normal asteroids, and appear in addition to normal spawns. In order to not completely overwhelm platform turrets, both small and medium promethium asteroids are highly vulnerable to [entity=laser-turret]. For best results, you will want both types of turrets on your platforms.\n\nNote that specifically for [item=agricultural-science-pack], crafting is affected by the freshness of promethium. This recipe requires less promethium than others to make it easier, but you risk wasting a large amount of effective science if you don't apply Gleba principles to your Gleba platform. Keep belts moving, and throw out unused promethium! If done correctly, you can actually end up with packs that are fresher than the data used to make it. Due to pack upcycling mentioned below, it's generally a good idea to convert data into packs quickly to maximize freshness.\n\nLastly, science packs start out at half effectiveness and need to be upcycled to gain the full effect. This is an optional process, though techs are balanced around using packs of rare quality.\nUpcycling can be done via dedicated upcycling recipes [recipe=nso-space-science-pack-upcycle] that consume slurry and have a base 20% chance to increase the quality of the pack. Quality modules can be used to increase this chance, and speed modules are surprisingly viable for speeding up the process if you have lots of slurry to burn.\nUnlocking later tiers of quality allow for better science packs, though the later tiers give less of a bonus than the first few.
 nso-tech=As most early game science packs are now gone, all tech normally unlocked at chemical science is now unlocked from the start. Stat bonuses provided by unlocked techs are now available as statpacks which can be unlocked as soon as you craft your first lab. They are separated into [technology=nso-statpack-building] and [technology=nso-statpack-combat], and all future techs will branch off from one of these for easy navigating.\n\nUnlocking the first science pack is done through the [technology=space-science-pack] tech, which just requires you to power many labs for a long period of time. Early game, you will need to use the [item=nso-space-data] in labs to unlock the first few techs, the first of which will be [technology=kovarex-enrichment-process] to obtain the required uranium faster. Once you've unlocked at least one planet, you will be able to produce [item=space-science-pack]. Remember to use the new upcycling recipes to get the most out of each pack.\n\nAll techs now have 1/5th of their original costs, thouch most packs are around 5x as expensive to craft, and research times are much longer too. Infinite techs have been replaced with finite ones with relatively low caps, many requiring later packs to max out. For non-productivity techs, this cap is normally at 2-3 infinite tech levels in vanilla. Productivity techs are capped at 100%, with the final levels locked behind [technology=promethium-science-pack]. Exceptions are [technology=mining-productivity-6] and [technology=research-productivity]; the former has a few extra pre-infinite techs before it scales exponentially at aquilo pack level, and the latter now just scales slightly faster than normal.\n\nNoteable damage breakpoints:\n - Big asteroids take nine rockets to break normally, six after [technology=stronger-explosives-1] and three after [technology=stronger-explosives-2].\n - Artillery techs have all been merged into one type: [technology=nso-artillery-improvements-1]. The second level allows killing max-evo biter nests in one-shot, and pentapod nests in two. Use quality turrets if you want even more range.\n - [technology=railgun-damage] is now locked behind promethium, meaning you will NOT be able to one-shot huge promethium asteroids initially. The tech also now boosts handheld and turret versions separately, meaning quality ammo may be desired to deal with the huge demolishers as easily as before. Turrets should do enough damage to one-shot big stompers after researching the damage upgrade.
 nso-removals=Some early game buildings have been removed due to starting at a higher tech level than normal; you will spawn with starting material to avoid being softlocked. Certain buildings have new recipes to reflect this or have been otherwise tweaked. In most cases, the tweaks are in the player's favor. Some removals have been done simply because I viewed the extra tiers as bloat. I imagine this is an unpopular opinion, so eventually I do plan on making these removals a configurable option in the mod.\n\nRemoved items:\n - Small power pole\n - Burner and Normal inserter\n - Burner miner\n - Stone furnace\n - Assembling machine mk1 and mk3\n - Basic and Express transport belt tiers\n - Wood and Iron chests\n - All Mk2 Modules\n - Pre-space science packs\n - All other tip entries and multiple achievements; mainly due to removed items\n\nAdjusted items:\n - [recipe=fast-inserter] has same energy efficiency as normal inserters. Adjusted recipe slightly. [recipe=long-handed-inserter] also has an adjusted recipe.\n - [recipe=assembling-machine-2] buffed to crafting speed of 1.0 and has 4 module slots. Energy efficiency same as vanilla mk2. Adjusted recipe slightly.\n - Remaining transport belts have recipe adjustments. Note with just 2 tiers, belt weaving will be more limited.\n     - [recipe=fast-transport-belt], [recipe=fast-underground-belt], [recipe=fast-splitter]\n     - [recipe=turbo-transport-belt], [recipe=turbo-underground-belt], [recipe=turbo-splitter]\n - [entity=steel-chest] now have just 20 slots. Slightly cheaper.\n - All module mk3 recipes require extra circuits and mk1. New recipe is cheaper pre-fulgora and slightly more expensive post-fulgora compared to vanilla.\n - Module stats have been adjusted.\n     - [recipe=efficiency-module-3] is more effective.\n     - [recipe=speed-module-3] is less effective.\n     - Prod modules slow down machines twice as much, and [recipe=productivity-module-3] is less effective.\n     - Quality modules now have a penalty to energy efficiency.\n - [entity=tree-plant] now grow twice as fast and provide double wood.\n - Science packs have had a slight recipe adjustment.\n\nAgain, these changes are planned to be configurable in the future.
