@@ -9,8 +9,9 @@ Date: 2026.02.08
     - Oil refineries have a base quality bonus of 20% to accomplish this. Should not affect any other vanilla recipes.
     - Quality packs are less effective than vanilla, due to ease of upcycling. Rare packs are the new baseline. (Repair packs affected unfortunately)
     - Automation card techs reduced in price to avoid being impacted by quality changes. (Also Kovarex is cheaper to unlock.)
-    - Agricultural science packs spoil in 1h again due to addition of quality stuff. Result is now eggs to avoid easy access to quality circuits etc.
+    - Agricultural science packs spoil in 1h again due to addition of quality stuff. Result is now nutrients.
     - Quality modules now give a small energy efficiency penalty.
+    - Space slurry ratios adjusted, overall slightly cheaper.
     - Minor changes to recipe ordering in crafting tab.
     - Updated tips and tricks.
 ---------------------------------------------------------------------------------------------------
